--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.67.2",
     "framer-motion": "^10.18.0",
+    "highcharts": "^12.1.2",
+    "highcharts-react-official": "^3.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
