--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/theme-tools": "^2.2.6",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.67.2",
+    "@tanstack/react-table": "^8.21.3",
     "framer-motion": "^10.18.0",
     "highcharts": "^12.1.2",
     "highcharts-react-official": "^3.2.1",
